--- a/text/new1.html
+++ b/text/new1.html
@@ -482,19 +482,12 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#queston-1" >
-                    Where are you located?
+                    How long have you been working as a freelancer?
                 </button>
             </h2>
             <div id="queston-1" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur,
-                     adipisicing elit. Expedita assumenda, 
-                    animi distinctio modi, sunt atque molestiae totam nihil harum
-                     magni quo tempore alias possimus inventore 
-                    reiciendis, consequatur asperiores temporibus fuga ipsa.
-                     Quibusdam aperiam, voluptas laudantium vitae esse beatae rem
-                     sunt quae aspernatur enim deserunt soluta qui necessitatibus 
-                     doloremque cupiditate temporibus.
+                    I’ve been working as a freelancer for about one year.and i've built different sites with good user experience.
             </div>
         </div>
         <!-- item2 -->
@@ -502,19 +495,14 @@
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#queston-2" >
-                    How much does it cost to attend ?
+                    Do you offer discounts or custom pricing?
                 </button>
             </h2>
             <div id="queston-2" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur,
-                     adipisicing elit. Expedita assumenda, 
-                    animi distinctio modi, sunt atque molestiae totam nihil harum
-                     magni quo tempore alias possimus inventore 
-                    reiciendis, consequatur asperiores temporibus fuga ipsa.
-                     Quibusdam aperiam, voluptas laudantium vitae esse beatae rem
-                     sunt quae aspernatur enim deserunt soluta qui necessitatibus 
-                     doloremque cupiditate temporibus.
+                    I generally do not offer discounts or custom pricing,
+                     but I am happy to discuss pricing options and discounts
+                      on a case-by-case basis
             </div>
         </div>
             <!-- item3 -->
@@ -527,14 +515,7 @@
                 </h2>
                 <div id="queston-3" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        Lorem ipsum dolor sit amet consectetur,
-                         adipisicing elit. Expedita assumenda, 
-                        animi distinctio modi, sunt atque molestiae totam nihil harum
-                         magni quo tempore alias possimus inventore 
-                        reiciendis, consequatur asperiores temporibus fuga ipsa.
-                         Quibusdam aperiam, voluptas laudantium vitae esse beatae rem
-                         sunt quae aspernatur enim deserunt soluta qui necessitatibus 
-                         doloremque cupiditate temporibus.
+                       Most businesses in 2023 are running on websites, to promote their brand and improve sales of businesses, website are the future of marketing all over the world today.
                 </div>
             </div>
             <!-- item4 -->
@@ -542,19 +523,12 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#queston-4" >
-                        How do i sign up?
+                        Is my data and information secure?
                     </button>
                 </h2>
                 <div id="queston-4" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        Lorem ipsum dolor sit amet consectetur,
-                         adipisicing elit. Expedita assumenda, 
-                        animi distinctio modi, sunt atque molestiae totam nihil harum
-                         magni quo tempore alias possimus inventore 
-                        reiciendis, consequatur asperiores temporibus fuga ipsa.
-                         Quibusdam aperiam, voluptas laudantium vitae esse beatae rem
-                         sunt quae aspernatur enim deserunt soluta qui necessitatibus 
-                         doloremque cupiditate temporibus.
+                        All ways consider your data protection when building a website in the hands of Moses your data is secure
                 </div>
             </div>
             <!-- item5  -->
@@ -562,19 +536,12 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#queston-5" >
-                        Do you help find a job ?
+                        How do I contact you for more information?
                     </button>
                 </h2>
                 <div id="queston-5" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        Lorem ipsum dolor sit amet consectetur,
-                         adipisicing elit. Expedita assumenda, 
-                        animi distinctio modi, sunt atque molestiae totam nihil harum
-                         magni quo tempore alias possimus inventore 
-                        reiciendis, consequatur asperiores temporibus fuga ipsa.
-                         Quibusdam aperiam, voluptas laudantium vitae esse beatae rem
-                         sunt quae aspernatur enim deserunt soluta qui necessitatibus 
-                         doloremque cupiditate temporibus.
+                      You can message me on Whatsapp,on Twitter,on linkedin  or click on any of the icons in the contact section, 
                 </div>
             </div>
     </div>
