--- a/text/new1.html
+++ b/text/new1.html
@@ -52,12 +52,12 @@
 
         </div>
     </nav>
-    <div class="music"><audio src="../img/just (3).mp3" autoplay loop></audio></div>
+    <div class="music"><audio src="just (3).mp3" autoplay loop></audio></div>
     
   
     <section id="home" class="sect1">
         <br> <br> <br> <br> <br> <br>
-        <video src="../img/moses3.mp4" muted autoplay loop></video>
+        <video src="/moses3.mp4" muted autoplay loop></video>
         <div class="over"></div>
         <div class="container him">
             
