--- a/text/new1.html
+++ b/text/new1.html
@@ -52,7 +52,7 @@
 
         </div>
     </nav>
-    <div class="music"><audio src="just (3).mp3" autoplay loop></audio></div>
+<!--     <div class="music"><audio src="just (3).mp3" autoplay loop></audio></div> -->
     
   
     <section id="home" class="sect1">
